--- a/index.html
+++ b/index.html
@@ -81,12 +81,10 @@
                     <br>
                     <h5>Please remove one of your previous coins.</h5>
                     <hr>
-                    <div class="modal-body" id="firstCard">
+                    <div class="modal-body" id="modalBody">
                         <!-- Modal selected cards  -->
 
-                        <!-- <div id="firstCard"> -->
-
-                        <!-- </div> -->
+       
 
 
 
