spinner+modal-static-FIXED

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
 
         <!-- Modal Section -->
 
-        <div class="modal fade bd-example-modal-lg" id="coinModal" tabindex="-1" role="dialog"
-            aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal fade" id="coinModal" data-keyboard="false" data-backdrop="static"  tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <h2> You can choose only 5 coins.</h2>
@@ -83,7 +82,16 @@
                     <div class="modal-body" id="modalBody">
                         <!-- Modal selected cards  -->
 
-       
+                        <!-- add icon  -->
+                        <!-- Check modal static -->
+                        <!-- create a title on each page. -->
+                        <!-- create a spinner  -->
+                        <!-- 2 Sec ? -->
+                        <!-- Organize the code !  -->
+                        <!-- Check what you miss in both forms . -->
+                        <!-- Check if need Parallax -->
+                        <!--Thank you go to sleep its 3AM !  -->
+
 
 
 
@@ -95,7 +103,7 @@
 
     </div>
 
-    
+
 
 
 
