almost-fixed-modal

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="modal-body" id="modalBody">
                         <!-- Modal selected cards  -->
 
-                        <!-- Fix the modal , he show only the first selected cards .......... fuck me -->
+                        <!-- Fix the Close button modal -->
                         <!-- 2 Sec ? -->
                         <!-- Organize the code !  -->
                         <!-- Check what you miss in both forms . -->
