--- a/index.html
+++ b/index.html
@@ -90,22 +90,10 @@
                     </button>
                     <h2> You can choose only 5 coins.</h2>
                     <br>
-                    <h5>Please remove one of your previous coins by click on the check box below,Or exit the modal to uncheck your last chosen card.</h5>
+                    <h5>Please remove one of your previous coins by click on the red X button above,Or Uncheck your unnecessary card</h5>
                     <h6>Thank you.</h6>
                     <hr>
                     <div class="modal-body" id="modalBody">
-                        <!-- Modal selected cards  -->
-
-                        <!-- Fix the Close button modal -->
-                        <!-- 2 Sec ? -->
-                        <!-- Organize the code !  -->
-                        <!-- Check what you miss in both forms . -->
-                        <!-- Check if need Parallax -->
-                        
-                        <!--Thank you go to sleep its 3AM !  -->
-
-
-
 
                     </div>
                 </div>
