media-fixed-wow

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="assets/images/usd-coin-usdc-logo.png" class="logo-brand" alt="my-logo">
 
 
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <ul id="navLinks" class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
 
                     <a class="nav-link" aria-current="page" id="liveReportsLink" href="javascript:void(0)">Live
