--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.7.0.js"></script>
     <script defer src="main.js"></script>
-
+<!-- Title & Icon -->
     <title>Crypto4u</title>
     <link rel="icon" class="title-icon" type="image/x-icon" href="assets/images/cash-coin.svg">
 </head>
@@ -58,11 +58,7 @@
     <div id="pagesSection">
 
         <!-- Cards from js section -->
-
-        <div id="titleContainer"></div>
-
         <div id="displayContainer">
-
 
         </div>
 
@@ -80,9 +76,6 @@
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
-
-
-
 
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 
@@ -102,17 +95,6 @@
 
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
